Fix production asset links and add favicons

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,14 @@
   <meta name="twitter:description" content="Interactive web experiences featuring Errl, our trippy mascot." />
   
   <!-- Favicon (add when available) -->
-  <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
+  <link rel="icon" href="/favicon/favicon-face.ico" sizes="any">
+  <link rel="icon" href="/favicon/favicon-face-16.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="/favicon/favicon-face-32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/favicon/favicon-face-48.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="/favicon/favicon-face-64.png" sizes="64x64" type="image/png">
+  <link rel="icon" href="/favicon/favicon-face-128.png" sizes="128x128" type="image/png">
+  <link rel="icon" href="/favicon/favicon-face-256.png" sizes="256x256" type="image/png">
+  <link rel="apple-touch-icon" href="/favicon/favicon-face-256.png">
   
   <base href="%BASE_URL%">
   <link rel="preconnect" href="https://fonts.googleapis.com">
