Simplify pages and unify headers

--- a/src/apps/static/pages/about/index.html
+++ b/src/apps/static/pages/about/index.html
@@ -130,8 +130,9 @@
         <a class="errl-bubble-btn active" href="/about/" data-portal-link="about/index.html">About Errl</a>
         <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/index.html">Gallery</a>
         <a class="errl-bubble-btn" href="/assets/" data-portal-link="assets/index.html">Assets</a>
-        <a class="errl-bubble-btn" href="/studio.html">Studio</a>
-        <a class="errl-bubble-btn" href="/designer.html" data-multitool-link>Designer</a>
+        <a class="errl-bubble-btn" href="/studio/">Studio</a>
+        <a class="errl-bubble-btn" href="/design/" data-portal-link="design/">Design</a>
+        <a class="errl-bubble-btn" href="/chat/">Chat</a>
       </nav>
     </div>
   </header>
