--- a/src/apps/static/pages/assets/index.html
+++ b/src/apps/static/pages/assets/index.html
@@ -74,8 +74,9 @@ body{font-family:Inter,system-ui,sans-serif; background:var(--errl-bg); color:va
         <a class="errl-bubble-btn" href="/about/" data-portal-link="about/">About Errl</a>
         <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
         <a class="errl-bubble-btn active" href="/assets/" data-portal-link="assets/">Assets</a>
-        <a class="errl-bubble-btn" href="/studio.html">Studio</a>
-        <a class="errl-bubble-btn" href="/designer.html" data-multitool-link>Designer</a>
+        <a class="errl-bubble-btn" href="/studio/">Studio</a>
+        <a class="errl-bubble-btn" href="/design/" data-portal-link="design/">Design</a>
+        <a class="errl-bubble-btn" href="/chat/">Chat</a>
       </nav>
     </div>
   </header>
