--- a/src/apps/static/pages/games/index.html
+++ b/src/apps/static/pages/games/index.html
@@ -73,8 +73,9 @@
         <a class="errl-bubble-btn" href="/about/" data-portal-link="about/">About Errl</a>
         <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
         <a class="errl-bubble-btn" href="/assets/" data-portal-link="assets/">Assets</a>
-        <a class="errl-bubble-btn" href="/studio.html">Studio</a>
-        <a class="errl-bubble-btn" href="/designer.html" data-multitool-link>Designer</a>
+        <a class="errl-bubble-btn" href="/studio/">Studio</a>
+        <a class="errl-bubble-btn" href="/design/" data-portal-link="design/">Design</a>
+        <a class="errl-bubble-btn" href="/chat/">Chat</a>
         <a class="errl-bubble-btn active" href="/games/" data-portal-link="games/">Games</a>
       </nav>
     </div>
@@ -100,4 +101,3 @@
   </script>
 </body>
 </html>
-
