--- a/src/apps/static/pages/pin-designer/pin-designer.html
+++ b/src/apps/static/pages/pin-designer/pin-designer.html
@@ -441,8 +441,9 @@
       <a class="errl-bubble-btn" href="/about/" data-portal-link="about/">About Errl</a>
       <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
       <a class="errl-bubble-btn" href="/assets/" data-portal-link="assets/">Assets</a>
-      <a class="errl-bubble-btn active" href="#" data-multitool-link>Design</a>
-      <a class="errl-bubble-btn" href="/studio.html">Studio</a>
+      <a class="errl-bubble-btn active" href="/design/" data-portal-link="design/">Design</a>
+      <a class="errl-bubble-btn" href="/studio/">Studio</a>
+      <a class="errl-bubble-btn" href="/chat/">Chat</a>
     </nav>
     
     <div class="designer-toolbar">
