--- a/src/apps/static/pages/studio/index.html
+++ b/src/apps/static/pages/studio/index.html
@@ -479,7 +479,8 @@
           <a class="errl-bubble-btn" data-portal-link="gallery/" href="/gallery/">Gallery</a>
           <a class="errl-bubble-btn" data-portal-link="assets/" href="/assets/">Assets</a>
           <a class="errl-bubble-btn active" href="#studio">Studio</a>
-          <a class="errl-bubble-btn" href="/designer.html" data-multitool-link>Designer</a>
+          <a class="errl-bubble-btn" href="/design/" data-portal-link="design/">Design</a>
+          <a class="errl-bubble-btn" href="/chat/">Chat</a>
         </nav>
       </div>
     </header>
@@ -490,61 +491,20 @@
           <span class="studio-header__pill">Errl Studio Hub</span>
           <div class="studio-header__body">
             <div class="studio-header__copy">
-              <h1 class="studio-header__title">Choose your Errl Lab</h1>
+              <h1 class="studio-header__title">Errl Studio</h1>
               <p class="studio-header__subtitle">
-                Launch the live code playground, explore legacy experiments, or prep assets for the next show. Everything here shares the same project storage and asset pipeline as we finish the merge.
+                We are rebuilding the Studio from scratch. Pin Designer stays online while the rest reboots.
               </p>
             </div>
             <aside class="studio-header__meta">
-              <p class="studio-header__meta-title">In Progress</p>
-              <p>
-                Code Lab already uses the shared asset store. We’re wiring Math Lab, Shape Madness, and the Pin Designer to the same backbone next.
-              </p>
+              <p class="studio-header__meta-title">Rebuild Status</p>
+              <p>Pin Designer is live. More Studio tools will return soon.</p>
             </aside>
           </div>
         </header>
 
         <section class="studio-card-grid">
-          <a class="studio-card__link" href="/studio.html">
-            <div class="studio-card">
-              <div class="studio-card__header">
-                <h3 class="studio-card__title">Code Lab</h3>
-                <span class="studio-card__badge studio-card__badge--available">Ready</span>
-              </div>
-              <p class="studio-card__description">
-                Full Errl Live Studio editor with HTML/CSS/JS preview, Monaco, asset manager, and SVG tooling.
-              </p>
-              <span class="studio-card__cta">Launch</span>
-            </div>
-          </a>
-
-          <a class="studio-card__link" href="/studio/math-lab">
-            <div class="studio-card">
-              <div class="studio-card__header">
-                <h3 class="studio-card__title">Psychedelic Math Lab</h3>
-                <span class="studio-card__badge studio-card__badge--legacy">Legacy</span>
-              </div>
-              <p class="studio-card__description">
-                100+ interactive math toys and shaders. Legacy experience; opens inside the React shell.
-              </p>
-              <span class="studio-card__cta">Launch</span>
-            </div>
-          </a>
-
-          <a class="studio-card__link" href="/studio/shape-madness">
-            <div class="studio-card">
-              <div class="studio-card__header">
-                <h3 class="studio-card__title">Shape Madness</h3>
-                <span class="studio-card__badge studio-card__badge--legacy">Legacy</span>
-              </div>
-              <p class="studio-card__description">
-                38+ generative shape experiments. Legacy bundle, launching in a dedicated view.
-              </p>
-              <span class="studio-card__cta">Launch</span>
-            </div>
-          </a>
-
-          <a class="studio-card__link" href="/studio/pin-designer">
+          <a class="studio-card__link" href="/pin-designer/">
             <div class="studio-card">
               <div class="studio-card__header">
                 <h3 class="studio-card__title">Pin Designer</h3>
@@ -556,15 +516,17 @@
               <span class="studio-card__cta">Launch</span>
             </div>
           </a>
-        </section>
 
-        <section class="studio-roadmap">
-          <h2 class="studio-roadmap__title">Roadmap</h2>
-          <ul>
-            <li>Unified asset browser so every tool can open, edit, and export the same files.</li>
-            <li>Bridge Math Lab and Shape Madness into native React surfaces without losing legacy flair.</li>
-            <li>One set of keyboard shortcuts, panels, and history across all Studio experiences.</li>
-          </ul>
+          <div class="studio-card">
+            <div class="studio-card__header">
+              <h3 class="studio-card__title">More Coming Soon</h3>
+              <span class="studio-card__badge studio-card__badge--legacy">Soon</span>
+            </div>
+            <p class="studio-card__description">
+              New studio surfaces are on the way. We will relaunch tools as they are ready.
+            </p>
+            <span class="studio-card__cta">Check Back</span>
+          </div>
         </section>
       </div>
     </main>
