--- a/src/apps/static/pages/studio/pin-widget/ErrlPin.Widget/designer.html
+++ b/src/apps/static/pages/studio/pin-widget/ErrlPin.Widget/designer.html
@@ -202,7 +202,7 @@ svg{max-width:100%;max-height:100%;display:block;touch-action:none;overflow:hidd
 </style>
 </head>
 <body>
-  <a id="backLink" href="/studio.html" style="position:fixed; left:10px; top:10px; z-index:2000; padding:6px 10px; border-radius:999px; border:1px solid #ffffff22; background:rgba(15,22,32,.7); color:#dbe2ea; text-decoration:none; font-weight:600; backdrop-filter:saturate(110%) blur(2px); display:none;">← Back to Studio</a>
+  <a id="backLink" href="/studio/" style="position:fixed; left:10px; top:10px; z-index:2000; padding:6px 10px; border-radius:999px; border:1px solid #ffffff22; background:rgba(15,22,32,.7); color:#dbe2ea; text-decoration:none; font-weight:600; backdrop-filter:saturate(110%) blur(2px); display:none;">← Back to Studio</a>
   <div class="card">
     <button id="loadBtn" type="button" title="Load custom SVG" data-tip="Load your own SVG to customize.">Load</button>
     <input id="fileInput" type="file" accept="image/svg+xml,.svg"/>
