--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
       <a class="bubble menuOrb" data-angle="260" data-dist="175" href="/gallery/" data-portal-link="gallery/index.html"><span class="label">Gallery</span></a>
       <a class="bubble menuOrb" data-angle="320" data-dist="160" href="/assets/" data-portal-link="assets/index.html"><span class="label">Assets</span></a>
       <a class="bubble menuOrb" data-angle="20"  data-dist="200" href="/studio/"><span class="label">Studio</span></a>
-      <a class="bubble menuOrb" data-angle="75"  data-dist="150" href="/pin-designer/" data-portal-link="pin-designer/index.html"><span class="label">Design</span></a>
+      <a class="bubble menuOrb" data-angle="75"  data-dist="150" href="/design/" data-portal-link="design/"><span class="label">Design</span></a>
       <a class="bubble menuOrb" data-angle="100" data-dist="170" href="/chat"><span class="label">Chat</span></a>
       <a class="bubble menuOrb hidden-bubble" data-angle="180" data-dist="190" href="/games/" id="gamesBubble" style="display:none;" data-portal-link="games/index.html"><span class="label">Games</span></a>
     </div>
