--- a/src/apps/chatbot/index.html
+++ b/src/apps/chatbot/index.html
@@ -1,14 +1,109 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat with Errl</title>
-    <base href="%BASE_URL%">
-    <link rel="stylesheet" href="../../shared/styles/errlDesignSystem.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Chat | Errl</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../../shared/styles/errlDesignSystem.css" />
+  <link rel="stylesheet" href="../../fx/errl-bg.css">
+  <style>
+    body { margin: 0; padding: 0; font-family: 'Inter', system-ui, sans-serif; background: var(--errl-bg); color: var(--errl-text); min-height: 100vh; }
+    .errl-header{ position:sticky; top:0; width:100%; background: linear-gradient(135deg, rgba(220,220,240,0.95) 0%, rgba(180,180,200,0.9) 25%, rgba(160,160,180,0.9) 50%, rgba(180,180,200,0.9) 75%, rgba(220,220,240,0.95) 100%), linear-gradient(45deg, rgba(255,255,255,0.3) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.3) 100%); box-shadow: 0 8px 32px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.4) inset, 0 -1px 0 rgba(0,0,0,0.2) inset; border-bottom:1px solid rgba(120,120,140,0.6); padding:0.75rem 1rem; z-index:999; letter-spacing:-0.03em; }
+    .errl-header-content{ display:flex; align-items:center; justify-content:space-between; max-width:1200px; margin:0 auto; flex-wrap:nowrap; gap:0.75rem; overflow-x:auto; scrollbar-width:none; -ms-overflow-style:none; }
+    .errl-header-content::-webkit-scrollbar{ display:none; }
+    .errl-home-btn{ display:inline-flex; align-items:center; gap:.5rem; color:#fff; background: linear-gradient(135deg, #ff0080 0%, #8000ff 25%, #0080ff 50%, #00ff80 75%, #ff8000 100%); background-size:200% 200%; border:1px solid rgba(255,255,255,0.3); border-radius:999px; font-size:.8rem; font-weight:600; line-height:1; padding:.55rem .9rem .6rem; box-shadow:0 4px 12px rgba(0,0,0,0.3), 0 1px 0 rgba(255,255,255,0.3) inset; text-decoration:none; text-shadow:0 1px 2px rgba(0,0,0,0.8); animation: rainbow-flow 3s linear infinite; }
+    @keyframes rainbow-flow{ 0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%} }
+    @media (max-width: 640px){
+      .errl-home-btn{ width:38px; height:38px; padding:0; border-radius:999px; display:inline-grid; place-items:center; overflow:hidden; font-size:0; }
+      .errl-home-btn::before{ content:'←'; font-size:16px; line-height:1; filter: drop-shadow(0 1px 2px rgba(0,0,0,.8)); }
+    }
+    .errl-nav{ display:flex; gap:.5rem; align-items:center; flex-wrap:nowrap; overflow-x:auto; scrollbar-width:none; -ms-overflow-style:none; }
+    .errl-nav::-webkit-scrollbar{ display:none; }
+    .errl-bubble-btn{ position:relative; display:inline-flex; align-items:center; justify-content:center; min-width:6.5rem; max-width:10rem; padding:.6rem .9rem .7rem; border-radius:999px; font-size: clamp(0.65rem, 0.8rem, 0.9rem); font-weight:600; line-height:1.1; text-align:center; color:#e8e8e8; text-decoration:none; white-space:nowrap; text-shadow:0 1px 3px rgba(0,0,0,0.8); background: linear-gradient(135deg, rgba(100,100,120,0.9) 0%, rgba(60,60,80,0.9) 25%, rgba(40,40,60,0.9) 50%, rgba(60,60,80,0.9) 75%, rgba(100,100,120,0.9) 100%), linear-gradient(45deg, rgba(255,255,255,0.1) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.1) 100%); border:2px solid transparent; background-clip:padding-box; box-shadow: 0 4px 12px rgba(0,0,0,0.3), 0 1px 0 rgba(255,255,255,0.2) inset, 0 -1px 0 rgba(0,0,0,0.3) inset; flex-shrink:0; }
+    @media (max-width: 900px){
+      .errl-header-content{ flex-wrap:nowrap; gap:.5rem; }
+      .errl-nav{ gap:.4rem; max-width:100%; }
+      .errl-bubble-btn{ min-width:5.5rem; max-width:8rem; padding:.5rem .75rem .6rem; font-size: clamp(0.6rem, 0.75rem, 0.85rem); border-radius: 999px; }
+    }
+    @media (max-width: 640px){
+      .errl-header-content{ flex-wrap:nowrap; gap:.4rem; }
+      .errl-nav{ gap:.3rem; }
+      .errl-bubble-btn{ min-width:4.5rem; max-width:7rem; padding:.45rem .65rem .55rem; font-size: clamp(0.55rem, 0.65rem, 0.75rem); border-radius: 999px; aspect-ratio: 1.2; }
+    }
+    @media (max-width: 460px){
+      .errl-bubble-btn{ border-radius: 999px; aspect-ratio: 1.1; }
+    }
+    .errl-bubble-btn::before{ content:""; position:absolute; inset:-2px; border-radius:999px; padding:2px; background: linear-gradient(90deg, rgba(0,255,255,0.6) 0%, rgba(255,0,255,0.6) 25%, rgba(255,255,0,0.6) 50%, rgba(0,255,0,0.6) 75%, rgba(0,255,255,0.6) 100%); background-size:200% 100%; mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); mask-composite:xor; -webkit-mask-composite:xor; animation: led-flow 2s linear infinite; opacity:.7; }
+    @keyframes led-flow{ 0%{background-position:0% 50%} 100%{background-position:200% 50%} }
+    .errl-bubble-btn.active{ background: linear-gradient(135deg, rgba(140,140,160,0.95) 0%, rgba(100,100,130,0.95) 25%, rgba(80,80,110,0.95) 50%, rgba(100,100,130,0.95) 75%, rgba(140,140,160,0.95) 100%), linear-gradient(45deg, rgba(255,255,255,0.2) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.2) 100%); color:#fff; font-weight:700; text-shadow:0 1px 3px rgba(0,0,0,0.9); box-shadow: 0 6px 16px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.3) inset, 0 -1px 0 rgba(0,0,0,0.4) inset; }
+    .errl-bubble-btn.active::before{ background: radial-gradient(circle at 0% 50%, rgba(255,255,255,0.8) 0%, transparent 25%), radial-gradient(circle at 25% 50%, rgba(255,255,255,0.8) 0%, transparent 25%), radial-gradient(circle at 50% 50%, rgba(255,255,255,0.8) 0%, transparent 25%), radial-gradient(circle at 75% 50%, rgba(255,255,255,0.8) 0%, transparent 25%), radial-gradient(circle at 100% 50%, rgba(255,255,255,0.8) 0%, transparent 25%); background-size:20% 100%; animation: led-pulse 1s ease-in-out infinite alternate; opacity:.9; }
+    @keyframes led-pulse{ 0%{opacity:.5} 100%{opacity:1} }
+
+    .container { max-width: 1200px; margin: 0 auto; padding: 20px; }
+    h1 { font-size: 2.2rem; margin: 16px 0; text-align: center; opacity:.9; }
+    .coming-soon {
+      margin: 40px auto 60px;
+      max-width: 680px;
+      text-align: center;
+      padding: 40px 28px;
+      border-radius: 16px;
+      border: 1px solid rgba(var(--errl-text-rgb), 0.12);
+      background: rgba(8, 12, 22, 0.7);
+      box-shadow: 0 16px 32px rgba(0,0,0,0.35);
+    }
+    .coming-soon h2 { margin: 0 0 10px; font-size: 1.5rem; }
+    .coming-soon p { margin: 0; opacity: 0.75; }
+  </style>
+</head>
+<body>
+  <header class="errl-header">
+    <div class="errl-header-content">
+      <a class="errl-home-btn" href="/">← Back to Portal</a>
+      <nav class="errl-nav">
+        <a class="errl-bubble-btn" href="/about/" data-portal-link="about/">About Errl</a>
+        <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
+        <a class="errl-bubble-btn" href="/assets/" data-portal-link="assets/">Assets</a>
+        <a class="errl-bubble-btn" href="/design/">Design</a>
+        <a class="errl-bubble-btn" href="/studio/">Studio</a>
+        <a class="errl-bubble-btn active" href="/chat/">Chat</a>
+      </nav>
+    </div>
+  </header>
+  <div class="container">
+    <h1>Chat</h1>
+    <section class="coming-soon" aria-live="polite">
+      <h2>Coming Soon</h2>
+      <p>The Errl chat experience is being rebuilt.</p>
+    </section>
+  </div>
+
+  <script type="module">
+    const env = (import.meta && import.meta.env) ? import.meta.env : {};
+    const baseUrl = typeof env.BASE_URL === "string" ? env.BASE_URL : "/";
+    const trimmed = baseUrl.endsWith("/") ? baseUrl.slice(0, -1) : baseUrl;
+    function resolvePortalUrl(pagePath) {
+      let clean = pagePath.replace(/^pages\//, '');
+      clean = clean.replace(/^\//, '');
+      clean = clean.replace(/\/$/, '');
+      clean = clean.replace(/\/index\.html$/, '');
+      clean = clean.replace(/index\.html$/, '');
+      return clean ? `/${clean}/` : '/';
+    }
+
+    document.querySelectorAll("[data-portal-link]").forEach((el) => {
+      const target = el.getAttribute("data-portal-link");
+      if (target) {
+        const url = resolvePortalUrl(target);
+        el.setAttribute("href", url);
+      }
+    });
+
+    document.querySelectorAll("[data-multitool-link]").forEach((el) => {
+      const isDev = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
+      el.setAttribute("href", isDev ? "http://localhost:5173/designer.html" : "/designer.html");
+    });
+  </script>
+</body>
 </html>
