--- a/src/apps/static/pages/design/index.html
+++ b/src/apps/static/pages/design/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Art Gallery | Errl</title>
+  <title>Design | Errl</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../../../shared/styles/errlDesignSystem.css" />
   <link rel="stylesheet" href="../../../../fx/errl-bg.css">
   <style>
     body { margin: 0; padding: 0; font-family: 'Inter', system-ui, sans-serif; background: var(--errl-bg); color: var(--errl-text); min-height: 100vh; }
-    /* Header (shared) */
     .errl-header{ position:sticky; top:0; width:100%; background: linear-gradient(135deg, rgba(220,220,240,0.95) 0%, rgba(180,180,200,0.9) 25%, rgba(160,160,180,0.9) 50%, rgba(180,180,200,0.9) 75%, rgba(220,220,240,0.95) 100%), linear-gradient(45deg, rgba(255,255,255,0.3) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.3) 100%); box-shadow: 0 8px 32px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.4) inset, 0 -1px 0 rgba(0,0,0,0.2) inset; border-bottom:1px solid rgba(120,120,140,0.6); padding:0.75rem 1rem; z-index:999; letter-spacing:-0.03em; }
-    .errl-header-content{ display:flex; align-items:center; justify-content:space-between; max-width: 1200px; margin: 0 auto; flex-wrap: nowrap; gap: 0.75rem; overflow-x: auto; scrollbar-width: none; -ms-overflow-style: none; }
+    .errl-header-content{ display:flex; align-items:center; justify-content:space-between; max-width:1200px; margin:0 auto; flex-wrap:nowrap; gap:0.75rem; overflow-x:auto; scrollbar-width:none; -ms-overflow-style:none; }
     .errl-header-content::-webkit-scrollbar{ display:none; }
     .errl-home-btn{ display:inline-flex; align-items:center; gap:.5rem; color:#fff; background: linear-gradient(135deg, #ff0080 0%, #8000ff 25%, #0080ff 50%, #00ff80 75%, #ff8000 100%); background-size:200% 200%; border:1px solid rgba(255,255,255,0.3); border-radius:999px; font-size:.8rem; font-weight:600; line-height:1; padding:.55rem .9rem .6rem; box-shadow:0 4px 12px rgba(0,0,0,0.3), 0 1px 0 rgba(255,255,255,0.3) inset; text-decoration:none; text-shadow:0 1px 2px rgba(0,0,0,0.8); animation: rainbow-flow 3s linear infinite; }
     @keyframes rainbow-flow{ 0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%} }
@@ -42,7 +41,7 @@
     .errl-bubble-btn.active::before{ background: radial-gradient(circle at 0% 50%, rgba(255,255,255,0.8) 0%, transparent 25%), radial-gradient(circle at 25% 50%, rgba(255,255,255,0.8) 0%, transparent 25%), radial-gradient(circle at 50% 50%, rgba(255,255,255,0.8) 0%, transparent 25%), radial-gradient(circle at 75% 50%, rgba(255,255,255,0.8) 0%, transparent 25%), radial-gradient(circle at 100% 50%, rgba(255,255,255,0.8) 0%, transparent 25%); background-size:20% 100%; animation: led-pulse 1s ease-in-out infinite alternate; opacity:.9; }
     @keyframes led-pulse{ 0%{opacity:.5} 100%{opacity:1} }
 
-    .container { max-width: 1400px; margin: 0 auto; padding: 20px; }
+    .container { max-width: 1200px; margin: 0 auto; padding: 20px; }
     h1 { font-size: 2.2rem; margin: 16px 0; text-align: center; opacity:.9; }
     .coming-soon {
       margin: 40px auto 60px;
@@ -64,19 +63,19 @@
       <a class="errl-home-btn" href="/">← Back to Portal</a>
       <nav class="errl-nav">
         <a class="errl-bubble-btn" href="/about/" data-portal-link="about/">About Errl</a>
-        <a class="errl-bubble-btn active" href="/gallery/" data-portal-link="gallery/">Gallery</a>
+        <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
         <a class="errl-bubble-btn" href="/assets/" data-portal-link="assets/">Assets</a>
+        <a class="errl-bubble-btn active" href="/design/">Design</a>
         <a class="errl-bubble-btn" href="/studio/">Studio</a>
-        <a class="errl-bubble-btn" href="/design/" data-portal-link="design/">Design</a>
         <a class="errl-bubble-btn" href="/chat/">Chat</a>
       </nav>
     </div>
   </header>
   <div class="container">
-    <h1>Art Gallery</h1>
+    <h1>Design</h1>
     <section class="coming-soon" aria-live="polite">
       <h2>Coming Soon</h2>
-      <p>The gallery is being rebuilt. Check back for new drops.</p>
+      <p>The new design hub is on the way.</p>
     </section>
   </div>
 
