--- a/src/apps/static/pages/pin-designer/index.html
+++ b/src/apps/static/pages/pin-designer/index.html
@@ -78,8 +78,9 @@ body{font-family:Inter,system-ui,sans-serif; background:#0a0f18; color:var(--ink
         <a class="errl-bubble-btn" href="/about/" data-portal-link="about/">About Errl</a>
         <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
         <a class="errl-bubble-btn" href="/assets/" data-portal-link="assets/">Assets</a>
-        <a class="errl-bubble-btn active" href="#" data-multitool-link>Design</a>
-        <a class="errl-bubble-btn" href="/studio.html">Studio</a>
+        <a class="errl-bubble-btn active" href="/design/" data-portal-link="design/">Design</a>
+        <a class="errl-bubble-btn" href="/studio/">Studio</a>
+        <a class="errl-bubble-btn" href="/chat/">Chat</a>
       </nav>
     </div>
   </header>
