--- a/src/apps/static/pages/studio/math-lab/index.html
+++ b/src/apps/static/pages/studio/math-lab/index.html
@@ -150,8 +150,9 @@
         <a class="errl-bubble-btn" href="/about/" data-portal-link="about/">About Errl</a>
         <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
         <a class="errl-bubble-btn" href="/assets/" data-portal-link="assets/">Assets</a>
-        <a class="errl-bubble-btn" href="/studio.html">Studio</a>
-        <a class="errl-bubble-btn" href="/designer.html" data-multitool-link>Designer</a>
+        <a class="errl-bubble-btn" href="/design/" data-portal-link="design/">Design</a>
+        <a class="errl-bubble-btn" href="/studio/">Studio</a>
+        <a class="errl-bubble-btn" href="/chat/">Chat</a>
       </nav>
     </div>
   </header>
@@ -7668,4 +7669,3 @@ document.querySelectorAll("[data-multitool-link]").forEach((el) => {
 </script>
 </body>
 </html>
-
