--- a/src/apps/static/pages/assets/index.html
+++ b/src/apps/static/pages/assets/index.html
@@ -64,6 +64,7 @@ body{font-family:Inter,system-ui,sans-serif; background:var(--errl-bg); color:va
 }
 .box .frame iframe{ width:100%; height:100%; border:0; background:transparent; }
 </style>
+<link rel="stylesheet" href="../../../../shared/styles/errlPortalHeader.css" />
 <link rel="stylesheet" href="../../../../fx/errl-bg.css">
 </head>
 <body>
@@ -72,11 +73,11 @@ body{font-family:Inter,system-ui,sans-serif; background:var(--errl-bg); color:va
 <a class="errl-home-btn" href="/">← Back to Portal</a>
       <nav class="errl-nav">
         <a class="errl-bubble-btn" href="/about/" data-portal-link="about/">About Errl</a>
-        <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
         <a class="errl-bubble-btn active" href="/assets/" data-portal-link="assets/">Assets</a>
-        <a class="errl-bubble-btn" href="/studio/">Studio</a>
-        <a class="errl-bubble-btn" href="/design/" data-portal-link="design/">Design</a>
-        <a class="errl-bubble-btn" href="/chat/">Chat</a>
+        <a class="errl-bubble-btn" href="/design/" data-portal-link="design/" data-disabled-link="design" aria-disabled="true" tabindex="-1" title="Coming soon">Design</a>
+        <a class="errl-bubble-btn" href="https://forum.errl.wtf">Forum</a>
+        <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
+        <a class="errl-bubble-btn" href="/studio/" data-portal-link="studio/">Studio</a>
       </nav>
     </div>
   </header>
@@ -147,11 +148,53 @@ for(const t of assets){
   grid.appendChild(box);
 }
 
-// Resolve Designer links - use localhost in dev, relative path in production
-document.querySelectorAll("[data-multitool-link]").forEach((el) => {
-  const isDev = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
-  el.setAttribute("href", isDev ? "http://localhost:5173/designer.html" : "/designer.html");
-});
+// Disabled links (Design): prevent navigation and show “Coming soon”.
+(() => {
+  const TOAST_ID = 'errl-coming-soon-toast';
+  let hideTimer = null;
+  function showToast(message) {
+    let el = document.getElementById(TOAST_ID);
+    if (!el) {
+      el = document.createElement('div');
+      el.id = TOAST_ID;
+      el.style.position = 'fixed';
+      el.style.left = '50%';
+      el.style.bottom = '18px';
+      el.style.transform = 'translateX(-50%)';
+      el.style.zIndex = '9999';
+      el.style.maxWidth = 'min(92vw, 520px)';
+      el.style.padding = '10px 14px';
+      el.style.borderRadius = '999px';
+      el.style.border = '1px solid rgba(255,255,255,0.22)';
+      el.style.background = 'rgba(10, 14, 24, 0.88)';
+      el.style.backdropFilter = 'blur(10px)';
+      el.style.color = 'rgba(240, 245, 255, 0.96)';
+      el.style.font = "600 12px/1.2 ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Inter', 'Segoe UI', sans-serif";
+      el.style.letterSpacing = '0.04em';
+      el.style.textTransform = 'uppercase';
+      el.style.boxShadow = '0 10px 24px rgba(0,0,0,0.45)';
+      el.style.opacity = '0';
+      el.style.transition = 'opacity 140ms ease, transform 140ms ease';
+      document.body.appendChild(el);
+    }
+    el.textContent = message;
+    el.style.opacity = '1';
+    el.style.transform = 'translateX(-50%) translateY(0)';
+    if (hideTimer) window.clearTimeout(hideTimer);
+    hideTimer = window.setTimeout(() => {
+      el.style.opacity = '0';
+      el.style.transform = 'translateX(-50%) translateY(6px)';
+    }, 1400);
+  }
+
+  document.querySelectorAll('[data-disabled-link="design"]').forEach((el) => {
+    el.addEventListener('click', (e) => {
+      e.preventDefault();
+      e.stopPropagation();
+      showToast('Design — coming soon');
+    });
+  });
+})();
 </script>
 </body>
 </html>
