studio: add LimeWire simulator entry
Add LimeWire simulator to studio tools list and routing

--- a/src/apps/static/pages/studio/index.html
+++ b/src/apps/static/pages/studio/index.html
@@ -518,16 +518,18 @@
             </div>
           </a>
 
-          <div class="studio-card">
-            <div class="studio-card__header">
-              <h3 class="studio-card__title">More Coming Soon</h3>
-              <span class="studio-card__badge studio-card__badge--legacy">Soon</span>
+          <a class="studio-card__link" href="/studio/limewire-simulator/">
+            <div class="studio-card">
+              <div class="studio-card__header">
+                <h3 class="studio-card__title">LimeWire Simulator</h3>
+                <span class="studio-card__badge studio-card__badge--available">Ready</span>
+              </div>
+              <p class="studio-card__description">
+                Nostalgic Windows XP and LimeWire file-sharing simulator. Experience the classic early 2000s interface with authentic UI elements, retro aesthetics, and interactive file-sharing simulation.
+              </p>
+              <span class="studio-card__cta">Launch</span>
             </div>
-            <p class="studio-card__description">
-              New studio surfaces are on the way. We will relaunch tools as they are ready.
-            </p>
-            <span class="studio-card__cta">Check Back</span>
-          </div>
+          </a>
         </section>
       </div>
     </main>
